--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -133,7 +133,51 @@ body {
 	}
 }
 
+/*프로젝트 리스트 반응형*/
+/*프로젝트 리스트 반응형*/
 @media (max-width: 1400px) {
+	.list ul {
+		grid-template-columns: repeat(3, 380px);
+		row-gap: 1.6rem;
+	}
+}
+
+@media (max-width: 1290px) {
+	.list ul {
+		grid-template-columns: repeat(3, 330px);
+		row-gap: 1.6rem;
+	}
+}
+
+@media (max-width: 1025px) {
+	.list ul {
+		grid-template-columns: repeat(3, 410px);
+		row-gap: 1rem;
+	}
+}
+
+@media (max-width: 1000px) {
+	.list,
+	.ex_wrap {
+		margin: 0 30px;
+	}
+	.list ul {
+		grid-template-columns: repeat(2, 1fr);
+		gap: 1rem;
+	}
+}
+
+@media (max-width: 580px) {
+	.list,
+	.ex_wrap {
+		margin: 0 20px;
+	}
+
+	.list ul {
+		grid-template-columns: repeat(1, 1fr);
+		row-gap: 0.75rem;
+		justify-content: space-between;
+	}
 }
 
 /***********************경력 사항***************************/
