--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -134,7 +134,6 @@ body {
 }
 
 /*프로젝트 리스트 반응형*/
-/*프로젝트 리스트 반응형*/
 @media (max-width: 1400px) {
 	.list ul {
 		grid-template-columns: repeat(3, 380px);
@@ -239,6 +238,14 @@ body {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	justify-content: space-around;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	color: #101010;
+}
+
+.timeline-text {
 	-webkit-box-pack: center;
 	-ms-flex-pack: center;
 	justify-content: center;
@@ -246,10 +253,27 @@ body {
 	-webkit-box-direction: normal;
 	-ms-flex-direction: column;
 	flex-direction: column;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
+}
+
+.img_wrap {
+	width: 100px;
+	height: 100px;
+	display: flex;
+	justify-content: center;
 	align-items: center;
-	color: #101010;
+}
+.img_wrap img {
+	width: 100%;
+	height: 100%;
+	border-radius: 8px;
+	-o-object-fit: cover;
+	object-fit: cover;
+	-o-object-position: center;
+	object-position: center;
+	-webkit-transition: -webkit-transform 0.3s ease;
+	transition: -webkit-transform 0.3s ease;
+	-o-transition: transform 0.3s ease;
+	transition: transform 0.3s ease;
 }
 
 .timeline-year {
