--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -256,24 +256,25 @@ body {
 }
 
 .img_wrap {
-	width: 100px;
-	height: 100px;
+	width: 200px;
+	height: 200px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	border-radius: 50%;
 }
+
 .img_wrap img {
-	width: 100%;
-	height: 100%;
-	border-radius: 8px;
-	-o-object-fit: cover;
+	width: auto;
+	max-width: 200px;
+	height: 200px;
 	object-fit: cover;
+	image-rendering: pixelated;
+	display: block;
 	-o-object-position: center;
 	object-position: center;
-	-webkit-transition: -webkit-transform 0.3s ease;
-	transition: -webkit-transform 0.3s ease;
-	-o-transition: transform 0.3s ease;
 	transition: transform 0.3s ease;
+	border-radius: 50%;
 }
 
 .timeline-year {
