경력사항 : 이미지 수정

--- a/client/src/assets/css/page.css
+++ b/client/src/assets/css/page.css
@@ -268,7 +268,7 @@ body {
 	width: auto;
 	max-width: 200px;
 	height: 200px;
-	object-fit: contain;
+	object-fit: cover;
 	image-rendering: pixelated;
 	display: block;
 	-o-object-position: center;
