--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -577,6 +577,31 @@
 }
 
 /* 마커 위치 수동 지정 */
+.circle-marker--1 {
+	left: 53%;
+	top: 51%;
+}
+.circle-marker--2 {
+	left: 35%;
+	top: 50%;
+}
+.circle-marker--3 {
+	left: 36%;
+	top: 55%;
+}
+.circle-marker--4 {
+	left: 48.5%;
+	top: 50%;
+}
+.circle-marker--5 {
+	left: 47.5%;
+	top: 59%;
+}
+.circle-marker--6 {
+	left: 32%;
+	top: 50%;
+}
+
 .active-marker--1 {
 	left: 53%;
 	top: 51%;
