마커 웨이브 수정

--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -529,49 +529,38 @@
 	width: 20px;
 	height: 20px;
 	border-radius: 50%;
-	background: rgba(231, 76, 60, 0.4);
 	left: 50%;
 	top: 50%;
-	-webkit-transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 	z-index: -1;
-	-webkit-animation: ripple 1.8s infinite ease-out;
-	animation: ripple 1.8s infinite ease-out;
+	pointer-events: none;
 }
 
 .marker-wave--inner {
 	width: 12px;
 	height: 12px;
+}
+
+.marker-wave__scale {
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	background: rgba(231, 76, 60, 0.4);
+	animation: ripple-scale 1.8s infinite ease-out;
+}
+
+.marker-wave--inner .marker-wave__scale {
 	background: rgba(231, 76, 60, 0.6);
-	-webkit-animation-delay: 0.4s;
 	animation-delay: 0.4s;
 }
 
-@-webkit-keyframes ripple {
+@keyframes ripple-scale {
 	0% {
-		-webkit-transform: translate(-50%, -50%) scale(0.7);
-		transform: translate(-50%, -50%) scale(0.7);
+		transform: scale(0.7);
 		opacity: 0.8;
 	}
-
 	100% {
-		-webkit-transform: translate(-50%, -50%) scale(2.2);
-		transform: translate(-50%, -50%) scale(2.2);
-		opacity: 0;
-	}
-}
-
-@keyframes ripple {
-	0% {
-		-webkit-transform: translate(-50%, -50%) scale(0.7);
-		transform: translate(-50%, -50%) scale(0.7);
-		opacity: 0.8;
-	}
-
-	100% {
-		-webkit-transform: translate(-50%, -50%) scale(2.2);
-		transform: translate(-50%, -50%) scale(2.2);
+		transform: scale(2.2);
 		opacity: 0;
 	}
 }
