--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -386,8 +386,8 @@
 	width: 14px;
 	height: 14px;
 	border-radius: 50%;
-	background: rgba(255, 255, 255, 0.6);
-	border: 2px solid #555;
+	background: rgb(255, 255, 255);
+	border: 2px solid #777;
 	-webkit-transform: translate(-50%, -50%);
 	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
