풀페이지 워터마크 제거

--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -13,7 +13,9 @@
 	align-items: center;
 	overflow: hidden;
 }
-
+.fp-watermark {
+	display: none;
+}
 .section H1 {
 	font-family: 'MonumentExtended';
 }
