--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -279,8 +279,8 @@
 .about_keyword {
 	position: absolute;
 	top: 0;
-	right: 0;
-	width: 700px;
+	right: 4%;
+	width: 800px;
 	height: 600px;
 	background: #333;
 	transform: translate(100%);
@@ -307,7 +307,7 @@
 	width: 100%;
 	border-radius: 0;
 	margin-bottom: 1rem;
-	height: 400px;
+	height: 300px;
 	margin-top: 4px;
 }
 
