[main] 섹션4 안내문구 추가

--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -412,6 +412,10 @@
 	text-align: center;
 	color: #fff;
 	font-family: 'Pretendard';
+	position: absolute;
+	font-size: 1rem;
+	top: 10px;
+	width: 100%;
 }
 
 .map-background {
