--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -419,7 +419,7 @@
 }
 
 .map-background {
-	background: url(/assets/map-DGh0WgST.svg) no-repeat center center/contain;
+	background: url(/client/src/assets/img/map.svg) no-repeat center center/contain;
 	position: absolute;
 	top: 0;
 	right: 0;
