[main] 섹션4 지도이미지 경로 재수정

--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -419,7 +419,7 @@
 }
 
 .map-background {
-	background: url('/client/src/assets/img/map.svg') no-repeat center center/contain;
+	background: url('/img/map.svg') no-repeat center center / contain;
 	position: absolute;
 	top: 0;
 	right: 0;
