--- a/client/src/assets/css/project_details.css
+++ b/client/src/assets/css/project_details.css
@@ -1,6 +1,7 @@
 .project_details {
     padding: 120px 0 100px;
-    margin: 0 60px;
+    margin: 0 auto;
     min-height: 680px;
     display: block;
+    max-width: 1240px;
 }
