--- a/client/src/assets/css/fullpage.css
+++ b/client/src/assets/css/fullpage.css
@@ -311,7 +311,7 @@
 	padding: 0.75rem;
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-end;
 	border-radius: 50%;
 	transition: background 0.3s ease;
 	position: absolute;
